update script and bump version

--- a/package.json
+++ b/package.json
@@ -1,22 +1,24 @@
 {
-  "name": "vue-uikit-starter",
-  "description": "A basic starting point for using vue.js and uikit, powered by laravel-mix",
-  "version": "1.0.1",
-  "author": "Askaoru <askaoru04@gmail.com>",
-  "scripts": {
-    "dev": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules",
-    "watch": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules",
-    "watch-poll": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --watch-poll --progress --hide-modules",
-    "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot",
-    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules"
-  },
-  "dependencies": {
-    "jquery": "^3.2.1",
-    "uikit": "^3.0.0-beta.30",
-    "vue": "^2.4.2"
-  },
-  "devDependencies": {
-    "cross-env": "^3.2.4",
-    "laravel-mix": "^1.0.7"
-  }
+    "name": "vue-uikit-starter",
+    "description": "A basic starting point for using vue.js and uikit, powered by laravel-mix",
+    "version": "1.0.1",
+    "author": "Askaoru <askaoru04@gmail.com>",
+    "scripts": {
+        "dev": "npm run development",
+        "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "watch": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "watch-poll": "npm run watch -- --watch-poll",
+        "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "prod": "npm run production",
+        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+    },
+    "dependencies": {
+        "jquery": "^3.2",
+        "uikit": "^3.0",
+        "vue": "^2.4"
+    },
+    "devDependencies": {
+        "cross-env": "^5.0.1",
+        "laravel-mix": "^1.4"
+    }
 }
