--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "dependencies": {
         "jquery": "^3.2",
         "uikit": "^3.0",
-        "vue": "^2.4"
+        "vue": "^2.4",
+        "vue-router": "^2.7.0"
     },
     "devDependencies": {
         "cross-env": "^5.0.1",
